<resources>
    <string name="app_name">TreatEasy</string>
    <string name="error_password_empty">Please enter password.</string>
    <string name="error_email_empty">Please enter email address.</string>
    <string name="error_email_invalid">Please enter a valid email address</string>
    <string name="error_password_invalid">Please enter a valid password</string>
    <string name="tv_cancel">Cancel</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="tv_ok">OK</string>

    <string name="add_member">Cant find your family member? <font color='#8ebf46'>Add New</font></string>
    <!--navigation drawer string-->
    <string name="dashboard">Home Dashboard</string>
    <string name="my_profile">My Profile</string>
    <string name="setting">Setting</string>
    <string name="notification">Notification</string>
    <string name="rate_card">Rate Card</string>
    <string name="share_this_app">Share This App</string>
    <string name="need_help">Need Help</string>
    <string name="log_out">Log Out</string>


    <!--Login String-->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="enter_email_id">Enter email id / Mobile Number</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_now">Don\'t have account? Signup</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_earnfromgame">Sign Up to EarnFromGame.</string>
    <string name="new_user">New User</string>
    <string name="existing_user">Existing User</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="wrong_credential">Please enter the valid input field</string>
    <string name="split_create">Create</string>

    <!--SignUp String-->
    <string name="sign_in_now">Already have an account? Login now</string>
    <string name="first_name">First Name</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_first_name">Enter full name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_phone_number">Enter Phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="digit_8_password_required">Minimum 8 digit of alphanumeric password required</string>
    <string name="min_1_alphabet">Min. 1 capital alphabet required</string>
    <string name="min_1_small_alphabet">Min. 1 small alphabet required</string>
    <string name="can_not_use_your_username">Can not use your username.</string>
    <string name="min_1_numeric_character">Min. 1 numeric character required.</string>
    <string name="valid_first_name">Please enter full name</string>
    <string name="valid_last_name">Please enter last name</string>
    <string name="wrong_email">The email address you entered already exists. Please Login or Recover your password</string>
    <string name="valid_phone_number">Please enter valid phone number</string>
    <string name="valid_dob">Please enter valid date of birth</string>
    <string name="password_not_match">Passwords don’t match. Please try again.</string>

    <!--Forgot Password-->
    <string name="forgot_pass">Forgot Password ?</string>
    <string name="forgot_pass_msg">Please enter the email address associated with your account,
        so we can verify your account and send you the instructions to recover your password.</string>
    <string name="forgot_sent_to_email">Please check your mailbox. We have send an PIN to reset your password</string>


    <!--Verify Pin-->
    <string name="enter_pin">Enter Pin</string>
    <string name="pin_msg">Pin has been sent to your email address.  Please enter it below.</string>
    <string name="resend_pin">Didn\’t receive it? RESEND OTP!</string>
    <string name="verify_email_address">Verify Email Address</string>
    <string name="pin_is_invalid">PIN is invalid</string>
    <string name="pin">PIN</string>
    <string name="resend_pin_to_email">Resend PIN</string>

    <!--Reset Password-->
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_now">PIN has been sent you on your email address. Please enter it below.</string>
    <string name="new_password">New password</string>
    <string name="retype_password">Retype password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="password_changed_successfully">Your password has been updated successfully.</string>


    <string name="alert">Alert</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="something_went_wrong">Something went wrong. Please try again.</string>
    <string name="ok">OK</string>
    <string name="failure">Failure</string>
    <string name="welcome">Welcome to</string>
    <string name="enter_your_mobile_number_and_we_ll_send_you_a_5_digit_one_time_password_otp">Enter your mobile number and we will send you a 5-digit one-time password (OTP).</string>
    <string name="submit">Submit</string>
    <string name="full_name">Full Name</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="send_otp">Send OTP</string>
    <string name="continue_str">Continue</string>
    <string name="signup">Signup</string>
    <string name="accept_terms_and_conditions">Accept terms and Conditions</string>
    <string name="enter_the_5_digit_code_sent_via_sms_on_91_1_s">Enter the 5-digit code sent via SMS on +91 %1$s</string>
    <string name="add_profile">Add Profile</string>
    <string name="now_add_pay_for_your_family_members">Family members</string>
    <string name="add_family_member">Family Member</string>
    <string name="edit_family_member">Edit Family Member</string>

    <string name="help">Help?</string>
    <string name="search_for_partner_and_other">Search for partner and other</string>
    <string name="pay_hospital_bills">Pay Hospital Bills</string>
    <string name="pay">Pay</string>
    <string name="wallet">Wallet</string>
    <string name="add_money">Add Money</string>
    <string name="transaction_history">Transaction History</string>
    <string name="surgery_package">Surgery \nPackage</string>
    <string name="services">Services</string>
    <string name="scan_any_qr">Scan Any QR</string>
    <string name="doctor_fees">Doctor Fees</string>
    <string name="lab_test">Lab Test</string>
    <string name="hospital_bills">Hospital Bills</string>
    <string name="my_balance">My Balance</string>
    <string name="add_balance">Add Balance</string>
    <string name="proceed">Proceed</string>
    <string name="view_more">View More</string>
    <string name="debit_credit_cards">Debit, Credit Cards</string>
    <string name="and_choose_other_payment_option">And Choose other payment option</string>
    <string name="bhim_upi">BHIM UPI</string>
    <string name="net_banking">Net Banking</string>
    <string name="add_money_to_wallet">Add Money to Wallet</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="personal_information">Personal Information</string>
    <string name="government_id">Government id</string>
    <string name="health_insurance_policy">Health insurance policy</string>
    <string name="previous_medical_history">Previous medical history</string>
    <string name="profile">Profile</string>
    <string name="change_location">Change Location</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="appointment_booking">Appointment Booking</string>
    <string name="my_appointment">My Appointments</string>
    <string name="appointment_detail">Appointment Detail</string>

    <string name="payment_detail">Payment Detail</string>
    <string name="appointment_status">Appointment Status</string>

    <string name="upload_your_id_picture">Upload Your id Picture</string>
    <string name="gender">Gender</string>
    <string name="profession">Profession</string>
    <string name="address_of_communication">Address of communication</string>
    <string name="company_name">Company Name</string>
    <string name="policy_number">Policy Number</string>
    <string name="save">Save</string>
    <string name="skip">Skip</string>
    <string name="user_not_registered">User not registered</string>
    <string name="upload_user_photo">Upload Photo</string>
    <string name="relation">Relation</string>
    <string name="book_service">Are you sure to book the %1$s</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="please_call_us_for_any_queries">Please call us for any queries</string>
    <string name="delete_text">Are you sure, you want to delete this item ?</string>
    <string name="logout_text">Are you sure, you want to logout ?</string>

    <string name="call">Call</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="select_family_member">Select Family Member</string>
    <string name="search">search</string>
    <string name="select_search_type">Select Search Type</string>
    <string name="date_of_booking">date of booking</string>
    <string name="surgery_date">Surgery Date</string>
    <string name="select_date">Select Date</string>
    <string name="booking_history">Booking History</string>
    <string name="payment_history">Transaction History</string>
    <string name="term">Term and Condition</string>
    <string name="privacy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="refund_condition">Refund Condition</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about">About Us</string>
    <string name="refund">Refund Condition</string>
    <string name="give_us_your_feedback">Give us your feedback</string>
    <string name="home">Home</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_member">Select Member</string>
    <string name="my_informations">My Informations</string>
    <string name="my_appointments">My Appointments</string>
    <string name="current_total_balance">Current Total Balance</string>


    <string-array name="upload_photo">
        <item>Camera</item>
        <item>Gallery</item>
        <item>Cancel</item>
    </string-array>
</resources>

