<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog"
    android:elevation="7dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp_30"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/delete_text"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@drawable/bg_cancel_btn"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/no"
                android:textAllCaps="false"
                android:textColor="@color/color_dark_gray" />

            <Button
                android:id="@+id/btnCall"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@drawable/bg_cancel_btn"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textColor="@color/color_dark_gray" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>