<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/v_light_grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@mipmap/bg_main"
        android:paddingTop="@dimen/dp_10">
        <include
            layout="@layout/toolbar_transparent"
            android:visibility="invisible" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_80"
                    android:gravity="center|bottom"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_20"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/welcome"
                        android:textColor="@color/splash_bg"
                        android:textSize="@dimen/sp_16" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/intro_logo" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">



                    <TextView
                        android:id="@+id/tv_phone_error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:fontFamily="@font/muli_semi_bold"
                        android:textColor="@color/color_red"
                        android:textSize="@dimen/sp_14"
                        android:visibility="gone" />
                </LinearLayout>


            </LinearLayout>

        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_login_bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/enter_your_mobile_number_and_we_ll_send_you_a_5_digit_one_time_password_otp"
            android:textAlignment="center"
            android:textColor="@color/login_text"
            android:textSize="@dimen/sp_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/bg_edittext"
            app:cardCornerRadius="@dimen/dp_8"
            app:cardElevation="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_20"
                android:fontFamily="@font/muli_semi_bold"
                android:text="+91"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/dp_10"
                android:background="@color/color_light_gray" />

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/enter_phone_number"
                android:inputType="number"
                android:maxLength="10"
                android:padding="@dimen/dp_10"
                tools:ignore="TextFields" />
        </LinearLayout>

        <include
            layout="@layout/button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp_20"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/sign_up_now"
            android:textColor="@color/splash_bg"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

</RelativeLayout>
