<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".feature.add_money.AddMoneyToWalletActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <include layout="@layout/toolbar_transparent" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_total_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_10"
                    android:ellipsize="end"
                    android:fontFamily="@font/muli_semi_bold"
                    android:padding="@dimen/dp_20"
                    android:singleLine="true"
                    tools:text="2405"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_24" />


                <include layout="@layout/recyclerview" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="@dimen/dp_10"
                    android:background="@drawable/bg_app_theme_stroke_round_corner"
                    android:ellipsize="end"
                    android:fontFamily="@font/muli_semi_bold"
                    android:paddingHorizontal="@dimen/dp_20"
                    android:paddingVertical="@dimen/dp_6"
                    android:singleLine="true"
                    android:text="@string/view_more"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_10"
                    android:layout_marginVertical="@dimen/dp_10"
                    android:fontFamily="@font/muli_regular"
                    android:text="@string/and_choose_other_payment_option"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_16" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dp_20"
                        android:layout_weight="1"
                        android:background="@drawable/bg_app_theme_stroke_round_corner_12dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingVertical="@dimen/dp_6"
                            android:src="@mipmap/ic_cards" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="@dimen/dp_6"
                            android:fontFamily="@font/muli_regular"
                            android:text="@string/debit_credit_cards"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp_14" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_20"
                        android:layout_weight="1"
                        android:background="@drawable/bg_app_theme_stroke_round_corner_12dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingVertical="@dimen/dp_6"
                            android:src="@mipmap/ic_cards" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="@dimen/dp_6"
                            android:fontFamily="@font/muli_regular"
                            android:text="@string/bhim_upi"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp_14" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:layout_marginEnd="@dimen/dp_20"
                        android:layout_weight="1"
                        android:background="@drawable/bg_app_theme_stroke_round_corner_12dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingVertical="@dimen/dp_6"
                            android:src="@mipmap/ic_cards" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="@dimen/dp_6"
                            android:fontFamily="@font/muli_regular"
                            android:text="@string/net_banking"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp_14" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_20"
                        android:layout_weight="1"
                        android:background="@drawable/bg_app_theme_stroke_round_corner_12dp"
                        android:gravity="center"
                        android:orientation="horizontal" />


                </LinearLayout>

                <include
                    layout="@layout/button_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_10"
                    android:layout_marginVertical="@dimen/dp_32" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>